# cookiecutter-kupfer-plugin-package

./: .gitignore  CONTRIBUTING.rst  README.rst  cookiecutter.json  setup.py
docs/: Makefile  conf.py  index.rst  make.bat  troubleshooting.rst  tutorial.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  {{cookiecutter.project_slug}}.py
