[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[metadata]
name = kupfer_plugin_{{ cookiecutter.project_slug }}
description-file = README.rst
version = {{ cookiecutter.version }}
summary = {{ cookiecutter.project_short_description }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author-email = {{ cookiecutter.email }}
home-page = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
license = {{ cookiecutter.open_source_license }}
keywords = kupfer {{ cookiecutter.project_slug }}

classifiers = Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    {{ license_classifiers[cookiecutter.open_source_license] }}
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
